<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="widget_title">Today\'s Market</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="title_activity_my_stocks_detail">Details</string>

    <string name="intent_extra" translatable="false">SYMBOL</string>

    <string name="widget_empty">No stock information aviable</string>

    <string name="empty_list"> No data </string>


    <string name="service_toast">This stock is already saved!</string>

    <string name="async_tasc_toast">Problem with getting data from server</string>
    <string name="stock_task_toast">No stock with that name</string>

    <string name="floating_button_des">Search for a Stock Symbol</string>

    <string name="radio_month">1 month</string>
    <string name="radio_3_months">3 months</string>
    <string name="radio_year">1 year</string>

    <string name="radio_button_m1">Show stock chart from one month</string>
    <string name="radio_button_m3">Show stock chart from three month</string>
    <string name="radio_button_y">Show stock chart from one year</string>

</resources>
